fix(website layout): wrap the main content
Ensure the main content of the website doens't go below the site
header.

Fix #520

--- a/docs/css/_documentation.sass
+++ b/docs/css/_documentation.sass
@@ -48,7 +48,6 @@ code
 
 .main-documentation
   height: 100%
-  padding-top: 50px
   .description
     min-height: 84px
 
